# wayid-verify

./: .gitignore  PUBLISHING.md  README.md
.github/workflows/: publish-js.yml  publish-python.yml  test.yml
js/: CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.json
js/example/: e2e.ts  server.ts
js/src/: cache.ts  client.ts  did.ts  express.ts  header.ts  index.ts  policy.ts  types.ts  verify.ts  worker.ts
js/test/: wayid.test.ts
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/wayid_verify/: __init__.py  asgi.py  client.py  did.py  flask_ext.py  policy.py  types.py  verify.py
python/tests/: test_wayid.py
