[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wayid-verify"
version = "0.1.0"
description = "Verify the WayID of an AI agent at your gateway."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
keywords = ["wayid", "agent", "identity", "verification", "gateway", "ai-agents"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
