[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wayid-verify"
version = "0.1.0"
description = "Verify the WayID of an AI agent at your gateway."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lineage Labs" }]
keywords = ["wayid", "agent", "identity", "verification", "gateway", "ai-agents"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/LineageLabs/wayid-verify"
Repository = "https://github.com/LineageLabs/wayid-verify"
Issues = "https://github.com/LineageLabs/wayid-verify/issues"
Changelog = "https://github.com/LineageLabs/wayid-verify/blob/main/python/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wayid_verify = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
